바닐라 JS 챌린지
숫자게임
(4.0~4.7)

--- a/src/style.css
+++ b/src/style.css
@@ -1,6 +1,11 @@
-#title {
-  color: white;
+.input-text {
+  display: flex;
 }
-body {
-  background-color: #1abc9c;
+
+#title {
+  font-size: 30px;
+}
+
+.hidden {
+  display: none;
 }
