--- a/art gallery/style.css
+++ b/art gallery/style.css
@@ -90,7 +90,7 @@ header div {
 .contents-images img {
   width: 14.5vw;
   height: 19vh;
-  object-fit: cover;
+  object-fit: fill;
 }
 
 .contents-images:not(.contents-images-first) img {
@@ -109,6 +109,8 @@ header div {
 header div:hover {
   opacity: 0.7;
   cursor: pointer;
+  text-decoration: underline;
+  text-underline-position: under;
 }
 
 a {
@@ -117,15 +119,35 @@ a {
 }
 
 a:hover {
-  opacity: 0.5;
+  opacity: 0.7;
+  text-decoration: underline;
+  text-underline-position: under;
+}
+
+@keyframes imgMove {
+  0% {
+    transform: none;
+  }
+  50% {
+    transform: translateY(-10px);
+  }
+  100% {
+    transform: none;
+  }
 }
 
 img:hover {
-  opacity: 0.5;
+  opacity: 0.7;
   cursor: pointer;
+  border: 1px solid black;
+
+  will-change: transform;
+  animation: imgMove 1s ease-in-out infinite;
 }
 
 span:hover {
-  opacity: 0.5;
+  opacity: 0.7;
   cursor: pointer;
+  text-decoration: underline;
+  text-underline-position: under;
 }
