--- a/canal_street/style.css
+++ b/canal_street/style.css
@@ -34,6 +34,11 @@ body {
   grid-template-columns: repeat(3, 1fr);
   grid-template-rows: auto;
 }
+
+.header-right > ul {
+  width: 82px;
+}
+
 .header-right ul:hover {
   cursor: pointer;
   opacity: 1;
